# mcp-server-prompts

./: pyproject.toml
src/mcp_server_prompts/: __init__.py  prompts.py  server.py
src/mcp_server_prompts/prompt_texts/: django-ninja.txt  model_context_protocol.txt  react_and_tailwindcss.txt
